--- a/aula-5/cnes/pom.xml
+++ b/aula-5/cnes/pom.xml
@@ -39,9 +39,9 @@
 
 	<developers>
 		<developer>
-			<id>jprnp</id>
-			<name>João Pedro R. N. Pinheiro</name>
-			<email>ullrickrnp@inf.ufg.br</email>
+			<id>estevaocs</id>
+			<name>Estevão Cristino da Silva</name>
+			<email>estevaocs12@gmail.com</email>
 			<organization>Instituto de Informática (UFG)</organization>
 			<organizationUrl>http://www.inf.ufg.br</organizationUrl>
 		</developer>
